Fixed more monitor DPI issues Moved lua scripts to their proper location Added F-14 Pilot and RIO viewport templates

--- a/DCS.Alternative.Launcher/Views/Settings/Controls/ViewportsSettingsControl.xaml
+++ b/DCS.Alternative.Launcher/Views/Settings/Controls/ViewportsSettingsControl.xaml
@@ -64,7 +64,7 @@
                                            FontFamily="{StaticResource Prototype}"
                                            FontSize="16"
                                            Foreground="#FFFFFFFF">
-                                    <Run Text="{Binding Module.Value.DisplayName, Mode=OneWay}" />
+                                    <Run Text="{Binding Name.Value, Mode=OneWay}" />
                                 </TextBlock>
                                 <Grid Margin="10,2,0,2">
                                     <Border Padding="5,0"
