--- a/DCS.Alternative.Launcher/Views/Settings/Dialogs/MonitorOverlay.xaml
+++ b/DCS.Alternative.Launcher/Views/Settings/Dialogs/MonitorOverlay.xaml
@@ -1,13 +1,14 @@
 ﻿<Window x:Class="DCS.Alternative.Launcher.Plugins.Settings.Dialogs.MonitorOverlay"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:Interactions="http://schemas.microsoft.com/xaml/behaviors"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:behaviors="clr-namespace:DCS.Alternative.Launcher.Interaction.Behaviors"
+        xmlns:controls="clr-namespace:DCS.Alternative.Launcher.Controls"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:interactions="http://schemas.microsoft.com/xaml/behaviors"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Title="Viewport Editor"
-        Width="1920"
-        Height="1080"
+        Width="10"
+        Height="10"
         AllowsTransparency="True"
         Background="Transparent"
         Topmost="True"
@@ -20,10 +21,12 @@
                       ResizeBorderThickness="0"
                       UseAeroCaptionButtons="False" />
     </WindowChrome.WindowChrome>
-    <Interactions:Interaction.Behaviors>
+    <interactions:Interaction.Behaviors>
         <behaviors:WindowDisableContextMenulBehavior />
-    </Interactions:Interaction.Behaviors>
-    <Grid>
-        <Border Background="#AF000000" />
-    </Grid>
+    </interactions:Interaction.Behaviors>
+    <controls:DpiDecorator>
+        <Grid>
+            <Border Background="#AF000000" />
+        </Grid>
+    </controls:DpiDecorator>
 </Window>
