--- a/DCS.Alternative.Launcher/Windows/MainWindow.xaml
+++ b/DCS.Alternative.Launcher/Windows/MainWindow.xaml
@@ -2,11 +2,11 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Interactions="http://schemas.microsoft.com/xaml/behaviors"
+        xmlns:behaviors="clr-namespace:DCS.Alternative.Launcher.Interaction.Behaviors"
         xmlns:controls="clr-namespace:DCS.Alternative.Launcher.Controls"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:behaviors="clr-namespace:DCS.Alternative.Launcher.Interaction.Behaviors"
         Title="DCS Alternative Launcher"
         Width="1200"
         Height="760"
@@ -31,8 +31,7 @@
     <Window.Resources>
         <SolidColorBrush x:Key="BorderAccentBrush" Color="#FF5F5F5F" />
     </Window.Resources>
-    <Border BorderBrush="{StaticResource BorderAccentBrush}"
-            BorderThickness="1">
+    <Border BorderBrush="{StaticResource BorderAccentBrush}" BorderThickness="1">
         <Grid>
             <Grid x:Name="BackgroundImage">
                 <controls:TransitionControl Content="{Binding ImageUrl.Value}">
