--- a/DCS.Alternative.Launcher/Wizards/Steps/FirstUse/CreateProfileWizardStepView.xaml
+++ b/DCS.Alternative.Launcher/Wizards/Steps/FirstUse/CreateProfileWizardStepView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="DCS.Alternative.Launcher.Wizards.Steps.CreateProfileWizardStepView"
+﻿<UserControl x:Class="DCS.Alternative.Launcher.Wizards.Steps.FirstUse.CreateProfileWizardStepView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:behaviors="clr-namespace:DCS.Alternative.Launcher.Interaction.Behaviors"
@@ -6,7 +6,8 @@
              xmlns:fluentWpf="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
              xmlns:local="clr-namespace:DCS.Alternative.Launcher.Wizards.Steps"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             d:DataContext="{d:DesignInstance local:CreateProfileWizardStepViewModel}"
+             xmlns:firstUse="clr-namespace:DCS.Alternative.Launcher.Wizards.Steps.FirstUse"
+             d:DataContext="{d:DesignInstance firstUse:CreateProfileWizardStepViewModel}"
              d:DesignHeight="768"
              d:DesignWidth="1024"
              mc:Ignorable="d">
