--- a/DCS.Alternative.Launcher/Wizards/Steps/FirstUse/FirstUseWelcomeStepView.xaml
+++ b/DCS.Alternative.Launcher/Wizards/Steps/FirstUse/FirstUseWelcomeStepView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="DCS.Alternative.Launcher.Wizards.Steps.FirstUseWelcomeStepView"
+﻿<UserControl x:Class="DCS.Alternative.Launcher.Wizards.Steps.FirstUse.FirstUseWelcomeStepView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
