--- a/DCS.Alternative.Launcher/Controls/MessageBoxEx/MessageBoxEx.xaml
+++ b/DCS.Alternative.Launcher/Controls/MessageBoxEx/MessageBoxEx.xaml
@@ -66,7 +66,14 @@
         </Style>
     </Window.Resources>
     <Grid Margin="20">
-        <Border Background="#FF000000" Effect="{StaticResource MaterialDesignShadowDepth3}" />
+        <Border Effect="{StaticResource MaterialDesignShadowDepth3}">
+            <Border.Background>
+                <RadialGradientBrush GradientOrigin="0,0" RadiusX="1" RadiusY="1">
+                    <GradientStop Offset="0" Color="#FF353C53" />
+                    <GradientStop Offset="0.7" Color="#FF030606" />
+                </RadialGradientBrush>
+            </Border.Background>
+        </Border>
 
         <fluentWpf:AcrylicPanel NoiseOpacity="0"
                                 Target="{x:Static windows:MainWindow.AcrylicSource}"
