Fixed assembly info changes that occured when moving to dotnetcore Added an auto update step to startup Added storage adapter/strategy for future-proofing some ideas around cloud storage... (probably wont happen... but why not be prepared, you know, unlike we were for covid-19) Removed date from version in About screen Fixed wizard installation step is valid column width

--- a/DCS.Alternative.Launcher/Wizards/Steps/FirstUse/InstallationsWizardStepView.xaml
+++ b/DCS.Alternative.Launcher/Wizards/Steps/FirstUse/InstallationsWizardStepView.xaml
@@ -52,7 +52,7 @@
                         <ColumnDefinition Width="20" />
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="20" />
-                        <ColumnDefinition Width="75" />
+                        <ColumnDefinition Width="120" />
                         <ColumnDefinition Width="20" />
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="1"
@@ -74,7 +74,7 @@
                     <TextBlock Grid.Column="9"
                                HorizontalAlignment="Center"
                                FontSize="16"
-                               Text="STATUS" />
+                               Text="VALID INSTALL" />
                 </Grid>
                 <ListView Grid.Row="1"
                           Background="Transparent"
@@ -113,7 +113,7 @@
                                     <ColumnDefinition Width="20" SharedSizeGroup="Spacer3" />
                                     <ColumnDefinition Width="*" SharedSizeGroup="Location" />
                                     <ColumnDefinition Width="20" SharedSizeGroup="Spacer4" />
-                                    <ColumnDefinition Width="75" SharedSizeGroup="Valid" />
+                                    <ColumnDefinition Width="120" SharedSizeGroup="Valid" />
                                     <ColumnDefinition Width="20" SharedSizeGroup="Spacer5" />
                                 </Grid.ColumnDefinitions>
                                 <RadioButton Grid.Column="1"
